--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=prefect
+    ports:
+      - 5440:5432
     expose:
       - 5432
     volumes: 
@@ -66,12 +68,35 @@ services:
     working_dir: "/root/flows"
     volumes:
       - "./flows:/root/flows"
+
     environment:
+      - PREFECT_API_DATABASE_CONNECTION_URL=postgresql+asyncpg://postgres:postgres@database:5432/prefect
+      - PIHOLE_API_AUTH=113459eb7bb31bddee85ade5230d6ad5d8b2fb52879e00a84ff6ae1067a210d3
+      - PIHOLE_API_URL=http://pihole/admin/api.php
       - PREFECT_API_URL=http://server:4200/api
 #       Use PREFECT_API_KEY to use the CLI to interact with Prefect Cloud
 #     - PREFECT_API_KEY=YOUR_API_KEY
     profiles: ["cli"]
-      
+    
+
+  pihole:
+    container_name: pihole
+    image: pihole/pihole:latest
+    # For DHCP it is recommended to remove these ports and instead add: network_mode: "host"
+    ports:
+      - "53:53/tcp"
+      - "53:53/udp"
+      - "80:80/tcp"
+    environment:
+      TZ: 'Asia/Jakarta'
+      WEBPASSWORD: 'password'
+    # Volumes store your data between container upgrades
+    volumes:
+      - './etc-pihole:/etc/pihole'
+      - './etc-dnsmasq.d:/etc/s.d'
+    #   https://github.com/pi-hole/docker-pi-hole#note-on-capabilities
+    restart: always
+
 volumes:
   prefect:
   db:
