--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,8 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+etc-pihole/gravity_old.db
+etc-pihole/gravity.db
+etc-pihole/pihole-FTL.db
+etc-pihole/setupVars.conf
+etc-pihole/versions
